--- a/iTrainee.MVC/iTrainee.MVC.csproj
+++ b/iTrainee.MVC/iTrainee.MVC.csproj
@@ -1,7 +1,26 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.1.5" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Areas\Admin\Controllers\" />
+    <Folder Include="Areas\Admin\Data\" />
+    <Folder Include="Areas\Admin\Models\" />
+    <Folder Include="Areas\Admin\Views\" />
+    <Folder Include="Areas\Mentor\Controllers\" />
+    <Folder Include="Areas\Mentor\Data\" />
+    <Folder Include="Areas\Mentor\Models\" />
+    <Folder Include="Areas\Mentor\Views\" />
+    <Folder Include="Areas\Trainee\Controllers\" />
+    <Folder Include="Areas\Trainee\Data\" />
+    <Folder Include="Areas\Trainee\Models\" />
+    <Folder Include="Areas\Trainee\Views\" />
+  </ItemGroup>
 
 </Project>
