Added initial version of Service, Api, and repository methods for Stream class.

--- a/iTrainee.MVC/appsettings.json
+++ b/iTrainee.MVC/appsettings.json
@@ -7,9 +7,7 @@
     }
   },
   "ApiURL": "http://localhost:62154/",
-  "AllowedHosts": "*",
+  "AllowedHosts": "*"
 
-  "ConnectionStrings": {
-    "iTraineeDB": "Server=(localdb)\\mssqllocaldb;Database=MvcMovieContext-7dc5b790-765f-4381-988c-5167405bb107;Trusted_Connection=True;MultipleActiveResultSets=true"
-  }
+  
 }
