--- a/iTrainee.MVC/iTrainee.MVC.csproj
+++ b/iTrainee.MVC/iTrainee.MVC.csproj
@@ -24,6 +24,7 @@
 
   <ItemGroup>
     <Folder Include="Areas\Admin\Controllers\" />
+    <Folder Include="Areas\Shared\Views\" />
   </ItemGroup>
 
   <ItemGroup>
