--- a/iTrainee.WebAPI/appsettings.json
+++ b/iTrainee.WebAPI/appsettings.json
@@ -6,5 +6,7 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": 
+  { "Connection": "Data Source=DESKTOP-BGQR4KQ;Initial Catalog=iTrainee;Integrated Security=True" }
 }
