Completed GetAllStreams from database to view

--- a/iTrainee.MVC/appsettings.json
+++ b/iTrainee.MVC/appsettings.json
@@ -6,7 +6,7 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "ApiURL": "http://localhost:62154/",
+  "ApiURL": "http://localhost:62154/api",
   "AllowedHosts": "*"
 
   
