Completed GetAllStreams from database to view

--- a/iTrainee.WebAPI/appsettings.json
+++ b/iTrainee.WebAPI/appsettings.json
@@ -8,6 +8,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "Connection": "Data Source=DESKTOP-2FR956B;Initial Catalog=iTrainee;Integrated Security=True"
+    "TraineeDB": "Data Source=DESKTOP-7VAO50V;Initial Catalog=iTrainee;Integrated Security=True"
   }
 }
