--- a/iTrainee.WebAPI/appsettings.json
+++ b/iTrainee.WebAPI/appsettings.json
@@ -7,6 +7,5 @@
     }
   },
   "AllowedHosts": "*",
-  "ConnectionStrings": 
-  { "Connection": "Data Source=DESKTOP-BGQR4KQ;Initial Catalog=iTrainee;Integrated Security=True" }
+  "ConnectionStrings": { "TraineeDB": "Data Source=DESKTOP-BGQR4KQ;Initial Catalog=iTrainee;Integrated Security=True" }
 }
