Action header updated based on role

--- a/iTrainee.WebAPI/appsettings.json
+++ b/iTrainee.WebAPI/appsettings.json
@@ -8,6 +8,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "TraineeDB": "Data Source=DESKTOP-7VAO50V;Initial Catalog=iTrainee;Integrated Security=True"
+    "TraineeDB": "Data Source=DESKTOP-P59KG4E;Initial Catalog=iTrainee;Integrated Security=True"
   }
 }
