Completed Delete in managing user from database to view

--- a/iTrainee.WebAPI/appsettings.json
+++ b/iTrainee.WebAPI/appsettings.json
@@ -7,5 +7,5 @@
     }
   },
   "AllowedHosts": "*",
-  "ConnectionStrings": { "TraineeDB": "Data Source=DESKTOP-BGQR4KQ;Initial Catalog=iTrainee;Integrated Security=True" }
+  "ConnectionStrings": { "TraineeDB": "Data Source=DESKTOP-7VAO50V;Initial Catalog=iTrainee;Integrated Security=True" }
 }
