Completed password encryption and username verification

--- a/iTrainee.WebAPI/appsettings.json
+++ b/iTrainee.WebAPI/appsettings.json
@@ -7,5 +7,5 @@
     }
   },
   "AllowedHosts": "*",
-  "ConnectionStrings": { "TraineeDB": "Data Source=DESKTOP-P59KG4E;Initial Catalog=iTrainee;Integrated Security=True" }
+  "ConnectionStrings": { "TraineeDB": "Data Source=DESKTOP-2FR956B;Initial Catalog=iTrainee;Integrated Security=True" }
 }
