--- a/iTrainee.WebAPI/appsettings.json
+++ b/iTrainee.WebAPI/appsettings.json
@@ -9,5 +9,10 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "TraineeDB": "Data Source=DESKTOP-BGQR4KQ;Initial Catalog=iTrainee;Integrated Security=True"
+  },
+  "JWT": {
+    "Key": "This is my supper secret key for jwt",
+    "Issuer": "https://codepedia.info",
+    "Audience": "codepedia.info"
   }
 }
