--- a/iTrainee.WebAPI/appsettings.json
+++ b/iTrainee.WebAPI/appsettings.json
@@ -7,10 +7,7 @@
     }
   },
   "AllowedHosts": "*",
-  "ConnectionStrings": { "TraineeDB": "Data Source=DESKTOP-P59KG4E;Initial Catalog=iTrainee;Integrated Security=True" }
-  "ConnectionStrings": {
-    "TraineeDB": "Data Source=DESKTOP-2FR956B;Initial Catalog=iTrainee;Integrated Security=True"
-  },
+  "ConnectionStrings": { "TraineeDB": "Data Source=DESKTOP-P59KG4E;Initial Catalog=iTrainee;Integrated Security=True" },
   "JWT": {
     "Key": "This is my supper secret key for jwt",
     "Issuer": "https://codepedia.info",
