--- a/iTrainee.WebAPI/appsettings.json
+++ b/iTrainee.WebAPI/appsettings.json
@@ -7,7 +7,7 @@
     }
   },
   "AllowedHosts": "*",
-  "ConnectionStrings": { "TraineeDB": "Data Source=DESKTOP-2FR956B;Initial Catalog=iTrainee;Integrated Security=True" },
+  "ConnectionStrings": { "TraineeDB": "Data Source=DESKTOP-18I2L5A\\MSSQLSERVER02;Initial Catalog=iTrainee;Integrated Security=True" },
   "JWT": {
     "Key": "This is my supper secret key for jwt",
     "Issuer": "https://codepedia.info",
