Trainee response for alert

--- a/iTrainee.WebAPI/appsettings.json
+++ b/iTrainee.WebAPI/appsettings.json
@@ -8,7 +8,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "TraineeDB": "Data Source=DESKTOP-BGQR4KQ;Initial Catalog=iTrainee;Integrated Security=True"
+    "TraineeDB": "Data Source=DESKTOP-P59KG4E;Initial Catalog=iTrainee;Integrated Security=True"
   },
   "JWT": {
     "Key": "This is my supper secret key for jwt",
