--- a/iTrainee.WebAPI/Properties/launchSettings.json
+++ b/iTrainee.WebAPI/Properties/launchSettings.json
@@ -4,7 +4,7 @@
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:52688/",
+      "applicationUrl": "http://localhost:62154",
       "sslPort": 44326
     }
   },
