--- a/iTrainee.WebAPI/Properties/launchSettings.json
+++ b/iTrainee.WebAPI/Properties/launchSettings.json
@@ -4,8 +4,8 @@
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:52688/",
-      "sslPort": 44326
+      "applicationUrl": "http://localhost:62154",
+      "sslPort": 0
     }
   },
   "profiles": {
